--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     <div class=topheader>Contact</div>
   </button>
   <button class="tablink" onclick="openTab(resume.pdf)">
-    <div class=topheader> <a href="resume.pdf" target="_blank">Resume</a> </div>
+    <div class=topheader> <a href="https://will-lalonde.github.io/4comms/resume.pdf" target="_blank">Resume</a> </div>
   </button>
   <button class="tablink" onclick="openPage('News', this, '#2c3e50')">
     <div class=topheader>Projects</div>
